--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -2,31 +2,262 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
-	width: 10px;
-	height: 12px;
-}
-
-::-webkit-scrollbar-track {
-	background: #f5f5f5;
-	border-radius: 6px;
-}
-
-::-webkit-scrollbar-thumb {
-	border-radius: 6px;
-	background: #ccc;
-}
-
-::-webkit-scrollbar-thumb:hover {
-	background: #999;
-}
-
 @layer base {
+	:root {
+		--background: 0 0% 100%;
+		--foreground: 222.2 84% 4.9%;
+
+		--muted: 210 40% 96.1%;
+		--muted-foreground: 215.4 16.3% 46.9%;
+
+		--popover: 0 0% 100%;
+		--popover-foreground: 222.2 84% 4.9%;
+
+		--card: 0 0% 100%;
+		--card-foreground: 222.2 84% 4.9%;
+
+		--border: 214.3 31.8% 91.4%;
+		--input: 214.3 31.8% 91.4%;
+
+		--primary: 222.2 47.4% 11.2%;
+		--primary-foreground: 210 40% 98%;
+
+		--secondary: 210 40% 96.1%;
+		--secondary-foreground: 222.2 47.4% 11.2%;
+
+		--accent: 210 40% 96.1%;
+		--accent-foreground: 222.2 47.4% 11.2%;
+
+		--destructive: 0 72.2% 50.6%;
+		--destructive-foreground: 210 40% 98%;
+
+		--ring: 222.2 84% 4.9%;
+
+		--radius: 0.5rem;
+	}
+
+	.dark {
+		--background: 222.2 84% 4.9%;
+		--foreground: 210 40% 98%;
+
+		--muted: 217.2 32.6% 17.5%;
+		--muted-foreground: 215 20.2% 65.1%;
+
+		--popover: 222.2 84% 4.9%;
+		--popover-foreground: 210 40% 98%;
+
+		--card: 222.2 84% 4.9%;
+		--card-foreground: 210 40% 98%;
+
+		--border: 217.2 32.6% 17.5%;
+		--input: 217.2 32.6% 17.5%;
+
+		--primary: 210 40% 98%;
+		--primary-foreground: 222.2 47.4% 11.2%;
+
+		--secondary: 217.2 32.6% 17.5%;
+		--secondary-foreground: 210 40% 98%;
+
+		--accent: 217.2 32.6% 17.5%;
+		--accent-foreground: 210 40% 98%;
+
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 210 40% 98%;
+
+		--ring: hsl(212.7, 26.8%, 83.9);
+	}
+
+	::-webkit-scrollbar {
+		@apply w-2;
+		@apply h-2;
+	}
+
+	::-webkit-scrollbar-track {
+		@apply !bg-gray-100/100;
+	}
+	::-webkit-scrollbar-thumb {
+		@apply rounded-sm !bg-black/30;
+	}
+
+	/* Firefox */
+	/* https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-color#browser_compatibility */
+	html {
+		scrollbar-color: hsl(215.4 16.3% 46.9% / 0.3);
+	}
+
+	html.dark {
+		scrollbar-color: hsl(215.4 16.3% 56.9% / 0.3);
+	}
+
+	.hide-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.hide-scrollbar {
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+	.antialised {
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+	}
+
+	/* static fonts */
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 100;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-Thin.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 100;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-ThinItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 200;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-ExtraLight.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 200;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-ExtraLightItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 300;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-Light.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 300;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-LightItalic.woff2) format('woff2');
+	}
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
 		font-weight: 400;
 		font-display: swap;
-		src: url(lib/assets/fonts/Inter-Regular.woff2) format('woff2');
+		src: url($lib/assets/fonts/Inter-Regular.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 400;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-Italic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 500;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-Medium.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 500;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-MediumItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 600;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-SemiBold.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 600;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-SemiBoldItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 700;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-Bold.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 700;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-BoldItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 800;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-ExtraBold.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 800;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-ExtraBoldItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 900;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-Black.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 900;
+		font-display: swap;
+		src: url($lib/assets/fonts/Inter-BlackItalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 100;
+		font-display: swap;
+		src: url($lib/assets/fonts/InterDisplay-Thin.woff2) format('woff2');
+	}
+
+	@font-face {
+		font-family: Geist;
+		font-style: normal;
+		font-weight: 100 900;
+		font-display: swap;
+		src: url($lib/assets/fonts/GeistVariableVF.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: InterVariable;
+		font-style: italic;
+		font-weight: 100 900;
+		font-display: swap;
+		src: url('InterVariable-Italic.woff2') format('woff2');
+	}
+}
+
+@layer base {
+	* {
+		@apply border-border;
+	}
+	body {
+		@apply bg-background text-foreground;
 	}
 }
