--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -102,155 +102,20 @@
 		-moz-osx-font-smoothing: grayscale;
 	}
 
-	/* static fonts */
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 100;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Thin.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 100;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-ThinItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 200;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-ExtraLight.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 200;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-ExtraLightItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 300;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Light.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 300;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-LightItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 400;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Regular.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 400;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Italic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 500;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Medium.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 500;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-MediumItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 600;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-SemiBold.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 600;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-SemiBoldItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 700;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Bold.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 700;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-BoldItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 800;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-ExtraBold.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 800;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-ExtraBoldItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: normal;
-		font-weight: 900;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-Black.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'Inter';
-		font-style: italic;
-		font-weight: 900;
-		font-display: swap;
-		src: url($lib/assets/fonts/Inter-BlackItalic.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: 'InterDisplay';
-		font-style: normal;
-		font-weight: 100;
-		font-display: swap;
-		src: url($lib/assets/fonts/InterDisplay-Thin.woff2) format('woff2');
-	}
-
-	@font-face {
-		font-family: Geist;
-		font-style: normal;
-		font-weight: 100 900;
-		font-display: swap;
-		src: url($lib/assets/fonts/GeistVariableVF.woff2) format('woff2');
-	}
-	@font-face {
-		font-family: InterVariable;
-		font-style: italic;
-		font-weight: 100 900;
-		font-display: swap;
-		src: url('InterVariable-Italic.woff2') format('woff2');
-	}
+@font-face {
+  font-family: InterVariable;
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url($lib/assets/fonts/InterVariable.woff2) format("woff2");
+}
+@font-face {
+  font-family: InterVariable;
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url($lib/assets/fonts/InterVariable-Italic.woff2) format("woff2");
+}
 }
 
 @layer base {
