wip: waitlist flow

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -102,20 +104,20 @@
 		-moz-osx-font-smoothing: grayscale;
 	}
 
-@font-face {
-  font-family: InterVariable;
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url($lib/assets/fonts/InterVariable.woff2) format("woff2");
-}
-@font-face {
-  font-family: InterVariable;
-  font-style: italic;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url($lib/assets/fonts/InterVariable-Italic.woff2) format("woff2");
-}
+	@font-face {
+		font-family: InterVariable;
+		font-style: normal;
+		font-weight: 100 900;
+		font-display: swap;
+		src: url($lib/assets/fonts/InterVariable.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: InterVariable;
+		font-style: italic;
+		font-weight: 100 900;
+		font-display: swap;
+		src: url($lib/assets/fonts/InterVariable-Italic.woff2) format('woff2');
+	}
 }
 
 @layer base {
